Fix: Article image overflow in small screen sizes

--- a/site/style.scss
+++ b/site/style.scss
@@ -431,6 +431,7 @@ article {
     display: block;
     padding: 6px;
     margin: 6px auto;
+    max-width: 100%;
 
     &.framed {
       background: $box-bg;
